...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_tutorial_first">

    <fragment
        android:id="@+id/nav_main"
        android:name="cat.urv.cloudlab.soundless.view.fragment.MainFragment"
        android:label="fragment_main"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_map"
        android:name="cat.urv.cloudlab.soundless.view.fragment.MapFragment"
...
